# auto_ROI

./: .dockerignore  .gitignore  Dockerfile  README.md  auto_pipeline.sh  detectAndConvert.py  entrypoint.sh  eval_yolo_precision.py  requirements.txt  roi_pipeline.sh
.github/workflows/: docker.yml
frame_compress/: bandwidth.sh  bandwidth_log.csv  compress.sh  帧率压缩.txt
h264_qpblock/: CMakeLists.txt  decoder.cpp  main.cpp  parseOptUtils.cpp  parseOptUtils.h
